--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,10 @@ theme:
     - navigation.tabs
     - navigation.tabs.sticky
 
+extra:
+  version:
+    provider: mike
+    
 plugins:
   - git-revision-date-localized:
       type: date
